<resources>
    <string name="app_name">RempaHustle</string>
    <string name="title_home">Beranda</string>
    <string name="title_list">Kamus</string>
    <string name="title_scan">Scan</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_profile">Profil</string>

    <!--    Welcome-->
    <string name="welcomeGreeting">Selamat Datang!</string>
    <string name="welcomeDesc">Siap-siap buat jalan-jalan ke dunia aroma dan rasa yang luar biasa. Di sini, kita bakal bongkar semua rahasia rempah dari penjuru Indonesia!</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>

    <!--    Register-->
    <string name="regisDesc">Buat akunmu untuk dapat bergabung dengan kami!</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="inputName">Masukkan nama</string>
    <string name="inputEmail">Masukkan email</string>
    <string name="inputPassword">Masukkan password</string>
    <string name="regisAsk">Sudah punya akun?</string>

    <!--    Login-->
    <string name="loginDesc">Kamu hampir sampai! Masuk dan nikmati ekspedisi rempah mu bersama kami!</string>
    <string name="loginAsk">Belum punya akun?</string>

    <!--    Home-->
    <string name="homeGreeting">Hai, Petualang Rempah!</string>
    <string name="homeDesc">Yuk jelajahi rempah lokal Indonesia disini</string>
    <string name="tahukahKamu">TAHUKAH KAMU?</string>
    <string name="randomInfo">Dalam beberapa budaya, rempah-rempah sering digunakan sebagai simbol kekayaan, kesejahteraan, dan kelimpahan dalam tradisi pernikahan dan upacara lainnya</string>
    <string name="rekomendasiRempah">Mungkin ini yang kamu cari</string>
    <string name="kamusRempah">Kamus Rempah</string>
    <string name="artikelRempah">Artikel terkait</string>
    <string name="selengkapnya">Selengkapnya</string>

    <!--    List-->
    <string name="titleListPage">Kamus Rempah</string>
    <string name="hintSearch">Cari rempah</string>

    <!--    Favorite-->
    <string name="titleFavoritePage">Rempah Favoritmu</string>
    <string name="yah">Yah...</string>
    <string name="emptyFav">Belum ada rempah yang difavoritkan</string>

    <!--    Profile-->
    <string name="titleProfilePage">Profil</string>
    <string name="username">Username</string>
    <string name="emailUser">email@gmail.com</string>
    <string name="nameProfile">Rakha Labib</string>
    <string name="emailProfile">rakhalabib@gmail.com</string>
    <string name="darkMode">Dark Mode</string>
    <string name="logout">Keluar</string>

    <!-- Night Mode Preferences -->
    <string name="titleSettingPage">Setting</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!--    Premium-->
    <string name="subscription">Premium Subscription</string>
    <string name="titlePremiumPage">Premium Subscription</string>
    <string name="tvBerlangganan">Berlangganan Premium</string>
    <string name="descPremium">Nikmati petualangan tak terbatas menjelajahi rempah di RempaHustle dengan berlangganan Premium!</string>
    <string name="tvUnlimitedScan">Unlimited Scan Rempah</string>
    <string name="descUnlimited">Kamu dapat scan rempah di sekitarmu tanpa batasan</string>
    <string name="tvRekomendasiResep">Rekomendasi Resep</string>
    <string name="descRekomendasiResep">Dapatkan rekomendasi resep yang sesuai dengan rempah yang kamu punya</string>
    <string name="tvForum">Forum Diskusi</string>
    <string name="descForum">Bagikan pengalaman, pertanyaan, dan resep buatanmu di forum diskusi khusus member premium</string>
    <string name="tvIklan">Bebas Iklan</string>
    <string name="descIklan">Temukan keseruan menjelajah rempah tanpa terhalang iklan</string>
    <string name="berlangganan">BERLANGGANAN SEKARANG</string>

    <!--    Detail-->
    <string name="deskripsi">Deskripsi</string>
    <string name="daerahPenghasil">Daerah Penghasil</string>
    <string name="kandungan">Kandungan</string>
    <string name="manfaat">Manfaat</string>
    <string name="caraPenyimpanan">Cara Penyimpanan</string>
    <string name="penggunaanUmum">Penggunaan Umum</string>
    <string name="masakan">Masakan</string>
    <string name="pengobatanTradisional">Pengobatan Tradisional</string>
    <string name="minuman">Minuman</string>
    <string name="resepTerkait">Resep Terkait</string>

    <!--    Resep-->
    <string name="titleResepPage">Resep terkait</string>
    <string name="bahan">Bahan</string>
    <string name="caraBuat">Cara membuat</string>
    <string name="rempahTerkait">Rempah terkait: </string>

    <!--    Artikel-->
    <string name="titleArtikelPage">Artikel Rempah</string>
    <string name="sumber">Sumber: </string>
    <string name="title_activity_nav">NavActivity</string>

    <!--    Scan-->
    <string name="titleScan">Scan Rempah</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="scan">Scan rempah</string>
    <string name="empty_image_warning">Masukkan berkas gambar terlebih dahulu</string>
    <string name="tvScan">Masukkan foto rempahmu disini!</string>
    <string name="descScan">Kami akan mendapatkan informasinya untukmu</string>
    <string name="emptyScan">Belum ada data rempah yang discan</string>
    <string name="lebihLengkap">Lebih lengkap </string>

</resources>