<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_dot"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scanning"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_fav"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>