<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/judulPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:paddingVertical="20dp"
            android:text="@string/titleScan"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tvScan"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/judulPage" />

        <TextView
            android:id="@+id/tvScan1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/descScan"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tvScan" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScan1" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvNamaScanRempah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/emptyScan"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvDescScanRempah"
            app:layout_constraintTop_toBottomOf="@+id/scanButton" />

        <TextView
            android:id="@+id/tvDescScanRempah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_light"
            android:maxLines="3"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaScanRempah"
            tools:text="Deskripsi rempah" />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/scanButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraButton"
            app:srcCompat="@drawable/ic_place_holder" />

        <Button
            android:id="@+id/scanButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/scan"
            app:layout_constraintBottom_toTopOf="@+id/tvNamaScanRempah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <TextView
            android:id="@+id/selengkapnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:clickable="true"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/lebihLengkap"
            android:textColor="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@id/moreButton"
            app:layout_constraintEnd_toStartOf="@+id/moreButton"
            app:layout_constraintTop_toBottomOf="@+id/tvDescScanRempah"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/selengkapnya" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>